Fixed gap size for "underover" content by separating underover columns from subsup columns.

--- a/style/math.css
+++ b/style/math.css
@@ -21,12 +21,18 @@
 	display: inline-flex;
     align-content: center;
 }
-.math-column {
+.math-underover {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    line-height:80%;
+    line-height:60%;
+}
+.math-subsup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .math-row {
     display: flex;
@@ -47,7 +53,6 @@
     margin-right: 0.1em;
     margin-left: 0.1em;
 }
-
 .math-smaller {
     font-size: 75%;
 }
